# assaylab

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  evaluation.md  index.md  llm.md  quickstart.md  rca.md  selection.md
docs/stylesheets/: extra.css
paper/: assaylab.tex
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/evaluation/: index.html
site/llm/: index.html
site/quickstart/: index.html
site/rca/: index.html
site/search/: search_index.json
site/selection/: index.html
src/assaylab/: __init__.py  config.py  errors.py
src/assaylab/adapters/: __init__.py  _demo_assets.py  cli.py  doctor.py
src/assaylab/attest/: __init__.py  ed25519.py  keys.py  receipt.py
src/assaylab/backends/: __init__.py  base.py  jsonl.py  junit.py  registry.py
src/assaylab/core/: __init__.py  analyze.py  ingest.py  perceive.py  sense.py  signature.py
src/assaylab/dashboard/: __init__.py  frontier.py  render.py  service.py
src/assaylab/eval/: __init__.py  fetch.py  flakeflagger.py
src/assaylab/llm/: __init__.py  gate.py  generate.py  heal.py  models.py  provider.py
src/assaylab/llm/providers/: __init__.py  claude.py  ollama.py  template.py
src/assaylab/models/: __init__.py
src/assaylab/rca/: __init__.py  features.py  flaky.py  grade.py  model.py  risk.py  rootcause.py  service.py
src/assaylab/select/: __init__.py  engine.py  service.py
tests/: test_analyze.py  test_dashboard.py  test_demo.py  test_ed25519.py  test_eval.py  test_ingest.py  test_llm.py  test_rca.py  test_security_keys.py  test_security_llm.py  test_security_model.py  test_security_xxe.py  test_select.py  test_signature.py  test_version.py
