[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assaylab"
version = "0.3.0"
description = "Validation intelligence for CI — failure-signature RCA, flaky-vs-real classification, and attested test-selection with a verifiable confidence bound. Contract-compatible with agentsensory (pass/warn/fail + Handoff)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Amit Patole", email = "amit.patole@gmail.com" }]
keywords = ["ci", "testing", "test-selection", "flaky-tests", "root-cause-analysis", "validation", "attestation", "agentsensory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

# Light base: deterministic ingest + signature clustering + CLI. No heavy ML/network deps.
dependencies = [
    "agentsensory>=0.1",   # shared verdict contract
    "pydantic>=2.6",       # models
    "pydantic-settings>=2.2",
    "typer>=0.12",         # CLI
    "platformdirs>=4.0",   # cache/config dirs
    "defusedxml>=0.7",     # safe JUnit XML parsing (XXE / billion-laughs)
]

[project.optional-dependencies]
# Heavy / optional surfaces behind extras, lazy-imported.
datasets = ["httpx>=0.27"]              # fetch public eval corpora (FlakeFlagger, RTPTorrent, IDoFT)
llm = ["anthropic>=0.40", "httpx>=0.27"]  # LLM-assisted test-gen / self-heal (claude, ollama)
crypto = ["cryptography>=42"]           # ed25519 (asymmetric) receipt signing/verification
serve = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "python-multipart>=0.0.9"]
mcp = ["mcp>=1.2"]
all = [
    "httpx>=0.27",
    "anthropic>=0.40",
    "cryptography>=42",
    "fastapi>=0.110", "uvicorn[standard]>=0.29", "python-multipart>=0.0.9",
    "mcp>=1.2",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10", "cryptography>=42"]

[project.urls]
Homepage = "https://github.com/amitpatole/assaylab"
Repository = "https://github.com/amitpatole/assaylab"

[project.scripts]
assaylab = "assaylab.adapters.cli:main"
# assaylab-mcp / assaylab-serve entry points land with the MCP + REST adapters (later phases).

# Third parties can register ingestion backends under this group.
[project.entry-points."assaylab.backends"]
junit = "assaylab.backends.junit:JUnitBackend"
jsonl = "assaylab.backends.jsonl:JsonlBackend"

[tool.hatch.build.targets.wheel]
packages = ["src/assaylab"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501", "UP042"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument", "fastapi.Depends", "fastapi.File", "fastapi.Form"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
